Bugzilla bug #40941: define _PR_HAVE_LARGE_OFF_T for ia64. Removed ia64 classic nspr user-level thread stuff because it doesn't work.