nsprpub/pr/include/md/_linux.h
@@ -80,7 +80,7 @@ extern PRInt32 _PR_x86_AtomicSet(PRInt32 *val, PRInt32 newval);
 #endif
 #undef _PR_USE_POLL
 #define _PR_STAT_HAS_ONLY_ST_ATIME
-#if defined(__alpha)
+#if defined(__alpha) || defined(__ia64__)
 #define _PR_HAVE_LARGE_OFF_T
 #else
 #define _PR_NO_LARGE_FILES
@@ -147,17 +147,6 @@ extern void _MD_CleanupBeforeExit(void);
 
 /* XXX not sure if this is correct, or maybe it should be 17? */
 #define PR_NUM_GCREGS 9
-
-#elif defined(__ia64__)
-/* ia64 based Linux */
-
-#define _MD_GET_SP(_t)
-#define _MD_SET_FP(_t, val)
-#define _MD_GET_SP_PTR(_t) &(_MD_GET_SP(_t))
-#define _MD_GET_FP_PTR(_t) ((void *) 0)
-#define _MD_SP_TYPE long int
-
-#undef PR_NUM_GCREGS
 
 #elif defined(__mc68000__)
 /* m68k based Linux */
